working jar from file