@@ -143,6 +143,15 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
+                <configuration>
+                    <mainClass>pl.PolishSchoolInDublin.MenuMemoryGame</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>C:\Users\Onbu\.m2\repository\org\openjfx\lib</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -150,9 +159,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <mainClass>pl.PolishSchoolInDublin.MenuMemoryGame</mainClass>
-                </configuration>
             </plugin>
 
             <plugin>
